# humanitz-bot

./: .dockerignore  .env.example  .env.example.zh-TW  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  README.zh-TW.md  docker-compose.yml  pyproject.toml
src/humanitz_bot/: __init__.py  __main__.py  bot.py  config.py  rcon_client.py  save_extractor.py
src/humanitz_bot/cogs/: admin_commands.py  chat_bridge.py  game_commands.py  server_status.py
src/humanitz_bot/services/: chart_service.py  database.py  player_identity.py  player_tracker.py  rcon_service.py  save_service.py  system_stats.py
src/humanitz_bot/utils/: chat_parser.py  formatters.py  i18n.py
