[project]
name = "humanitz-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.6.4",
    "matplotlib>=3.10.8",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.1",
]

[project.scripts]
humanitz-bot = "humanitz_bot:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
